We don't need the bullets. (And these are temporary triggers anyway.)

--- a/inst/DUEshiny/www/zoom_triggers.html
+++ b/inst/DUEshiny/www/zoom_triggers.html
@@ -1,9 +1,9 @@
 <!-- https://stackoverflow.com/questions/9798331/zoom-a-browser-window-view-with-javascript -->
 
 <ul id="zoom_triggers">
-    <li><a id="zoom_in">zoom in</a></li>
-    <li><a id="zoom_out">zoom out</a></li>
-    <li><a id="zoom_reset">reset zoom</a></li>
+    <a id="zoom_in">zoom in</a>
+    <a id="zoom_out">zoom out</a>
+    <a id="zoom_reset">reset zoom</a>
 </ul>
 
 <script>
